--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,17 @@
 <manifest package="george.android_example_firebase_authentication"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- Google Firebase Auth Related -->
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!-- TODO Reimplement as a server side action monitoring Firebase -->
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+
+    <!-- GPS Service Related -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-feature android:name="android.hardware.location.gps" />
 
     <application
         android:allowBackup="true"
@@ -12,12 +21,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:name="android.support.multidex.MultiDexApplication">
+
+        <meta-data
+            android:name="comgoogle.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
         <!--<activity-->
             <!--android:name=".MainActivity"-->
             <!--android:label="@string/app_name"-->
             <!--android:theme="@style/AppTheme.NoActionBar">-->
         <!--</activity>-->
-        <activity android:name=".SignInActivity">
+        <activity
+            android:name=".SignInActivity"
+            android:configChanges="orientation|screenSize" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -25,6 +40,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <service android:name=".CustomGeoFence.GpsService"
+            android:enabled="true"
+            android:exported="true"
+            ></service>
+
     </application>
 
 </manifest>
